<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_below="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_5">
        <TextView
            android:id="@+id/tv1"
            android:text="@string/bank_no"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_bank_no"
            android:text="@string/bank_card_no"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv2"
            android:layout_below="@+id/tv1"
            android:text="@string/deal_number"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_deal_number"
            android:layout_below="@+id/tv_bank_no"
            android:text="2"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv3"
            android:layout_below="@+id/tv2"
            android:text="@string/deal_all"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_deal_all"
            android:layout_below="@+id/tv_deal_number"
            android:text="2"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv4"
            android:layout_below="@+id/tv3"
            android:text="@string/payment_lines"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_payment_lines"
            android:layout_below="@+id/tv_deal_all"
            android:text="@string/money"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv5"
            android:layout_below="@+id/tv4"
            android:text="@string/available_lines"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_available_lines"
            android:layout_below="@+id/tv_payment_lines"
            android:text="@string/money"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv6"
            android:layout_below="@+id/tv5"
            android:text="@string/start_time"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_below="@+id/tv_available_lines"
            android:text="@string/time"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv7"
            android:layout_below="@+id/tv6"
            android:text="@string/pay_time"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_pay_time"
            android:layout_below="@+id/tv_start_time"
            android:text="@string/time"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

        <TextView
            android:id="@+id/tv8"
            android:layout_below="@+id/tv7"
            android:text="@string/create_time"
            style="@style/text_style4"
            android:textColor="@color/gray_999"/>

        <TextView
            android:id="@+id/tv_create_time"
            android:layout_below="@+id/tv_pay_time"
            android:text="@string/time"
            style="@style/text_style5"
            android:textColor="@color/gray_999" />

    </RelativeLayout>

    <View
        android:id="@+id/v1"
        android:layout_below="@+id/rl"
        android:layout_marginTop="@dimen/spacing_10"
        style="@style/view_line_margin_left_15"/>

    <RelativeLayout
        android:id="@+id/rl_query_more"
        android:layout_below="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_more"
            android:textColor="@color/gray_666"
            android:textSize="@dimen/text_size_16"
            android:layout_margin="@dimen/spacing_15"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_right"
            android:layout_marginRight="@dimen/spacing_15"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>