<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/et_phone"
        android:hint="@string/edit_phone"
       style="@style/edit_styles"/>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/et_password"
        android:hint="@string/edit_password"
        style="@style/edit_styles"/>

    <TextView
        android:id="@+id/tv_login"
        android:layout_marginTop="30dp"
        android:text="@string/bt_login"
        style="@style/bt_style"/>

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_normal"
        android:text="@string/forget_pwd"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/copy_right"
        android:textColor="@color/gray_999"
        android:textSize="@dimen/text_size"
        android:gravity="center" />
</LinearLayout>